glx/testdata/invalid/citation-missing-source.glx
# Invalid: Missing required 'source' field
citations:
  citation-12345678:
    page: "Page 45"
